test/cases/negative/existing8.ts

import { Bar } from 'specifier2'
export { Bar }
import Foo from 'specifier1' // error
export { Foo }
